# substitute

./: .gitignore  COPYING  Makefile.am  README  README.md  configure.ac
src/: Makefile.am  main.c  pfx_tree.c  pfx_tree.h  util.c  util.h
tests/: Makefile.am  common.h  pfx_tree.c  util.c
tests/util/: in  multi.out  single.out
